# fstl

./: CMakeLists.txt  README.md
exe/: fstl-e.rc
metainfo/: io.github.wdaniau.fstl.metainfo.xml
qt/: qt.qrc
src/: canvas.cpp  canvas.h  loader.cpp  main.cpp  shaderlightprefs.cpp  shaderlightprefs.h  window.cpp  window.h
xdg/: fstlapp-fstl-e.desktop  fstlapp-fstl.desktop
